--- a/app/templates/configure/attrib.html
+++ b/app/templates/configure/attrib.html
@@ -25,11 +25,35 @@
         <label for="attrib-description">Description:</label>
         <textarea id="attrib-description" name="attrib_description" rows="10" cols="50">{{ current.description }}</textarea>
         <br>
-        <input type="checkbox"
-               id="mult"
-               name="multiplicative"
-               {% if current.mult %}checked{% endif %}>
-        <label for="mult">Multiplicative</label>
+        <label>
+            <input type="radio"
+                   name="value_type"
+                   value="number"
+                   {% if not current.binary %}checked{% endif %}>
+            Number
+        </label>
+        <label>
+            <input type="radio"
+                   name="value_type"
+                   value="binary"
+                   {% if current.binary %}checked{% endif %}>
+            True/False
+        </label>
+        <br>
+        <label>
+            <input type="radio"
+                   name="mult"
+                   value="add"
+                   {% if not current.mult %}checked{% endif %}>
+            Adds
+        </label>
+        <label>
+            <input type="radio"
+                   name="mult"
+                   value="mult"
+                   {% if current.mult %}checked{% endif %}>
+            Multiplies
+        </label>
         <br>
         <div class="footer-buttons">
             <button type="submit" id="btn-save" name="save_changes">Save and Close</button>
