--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -474,6 +474,30 @@
                     </td>
                 </tr>
             {% endif %}
+            {% if game_data.events %}
+                <tr>
+                    <td>
+                        <table class="inner-table spacious" cellspacing="0" cellpadding="5">
+                        <h2>Item Events</h2>
+                        <ul>
+                            {% for evt in game_data.events %}
+                                {% set link = url_for('play_event', event_id=evt.id) %}
+                                {% set letter = link_letters.next(link) %}
+                                <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
+                                <span>[{{ letter }}]</span>
+                                <a href="{{ link }}">{{ evt.name }}</a>
+                                {% if evt.trigger_chance[0] > 0 %}
+                                    <span class="label-like">&nbsp;(chance to trigger)</span>
+                                {% endif %}
+                                <br>
+                            {% else %}
+                                <p>(None)</p>
+                            {% endfor %}
+                        </ul>
+                        </table>
+                    </td>
+                </tr>
+            {% endif %}
         </table>
         <script>
         $(document).ready(() => {
