Enum attributes. Completed dating scenario.

--- a/app/templates/configure/attrib.html
+++ b/app/templates/configure/attrib.html
@@ -40,6 +40,9 @@
             True/False
         </label>
         <br>
+        <label for="enum">Enumerated Values:</label>
+        <textarea id="enum" name="enum" rows="5" cols="15">{{ '\n'.join(current.enum) }}</textarea>
+        <br>
         <label>
             <input type="radio"
                    name="mult"
