--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -130,7 +130,7 @@
             updateQuantities();
 
             // Update quantities periodically
-            setInterval(updateQuantities, 10000);
+            //setInterval(updateQuantities, 10000);
         });
     </script>
 {% endblock %}
