Making a Living and Unformed Ideas scenarios. Item attributes in overview.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -299,6 +299,7 @@ textarea {
     position: relative;
     display: flex; 
     flex-basis: auto;
+    width: 50%;
     background-color: #2a2a2a; /* Dark gray background for the remaining progress */
     border-radius: 10px; /* Round box */
     overflow: hidden; /* Ensure that the progress bar stays within the container */
